# orion-service

./: .env  .gitignore  Cargo.toml  rpc.toml.example
examples/: client.rs
migrations/: 20230310054510_vocabulary.down.sql  20230310054510_vocabulary.up.sql  20230317020228_learn_word.down.sql  20230317020228_learn_word.up.sql  20230321082425_word_list.down.sql  20230321082425_word_list.up.sql  20230322024951_story.down.sql  20230322024951_story.up.sql
src/: lib.rs
src/learn_word/: mod.rs
src/rpc/: mod.rs  story.rs  vocabulary.rs
src/story/: mod.rs
src/vocabulary/: mod.rs
src/word_list/: mod.rs
