[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi = { version = "0.1.0", git = "https://github.com/sokach-dev/orion-abi" }
aes-config = "0.1.2"
# async-trait = "0.1.66"
chrono = { version = "0.4.23", features = ["serde"] }
clap = { version = "4.1.8", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
sqlx-database-tester = { version = "0.4.2", features = ["runtime-tokio"] }
time = { version = "0.3.20", features = ["macros"] }
tokio = { version = "1.26.0", features = ["full"] }
tonic = { version = "0.8.3", features = ["tokio-rustls", "gzip"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "local-time"] }
